# ai-booilerplate-v2

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/schemas/: document.py  orchestration.py
apps/backend/app/services/: genai.py  scraper.py  supabase_client.py
apps/frontend/: components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/frontend/src/: index.css  main.tsx  routeTree.gen.ts
apps/frontend/src/components/: index.tsx  theme-provider.tsx
apps/frontend/src/components/features/auth/: login-form.tsx  signup-form.tsx
apps/frontend/src/components/layouts/: app-layout.tsx  app-sidebar.tsx
apps/frontend/src/components/pages/: home.tsx
apps/frontend/src/components/shared/: logo.tsx  nav-main.tsx  nav-notifications.tsx  nav-user.tsx  team-switcher.tsx  theme-provider.tsx  theme-toggle.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  sidebar.tsx
apps/frontend/src/hooks/: useTranslation.tsx
apps/frontend/src/lib/: auth.tsx  constants.ts  supabase.ts
apps/frontend/src/routes/: __root.tsx  about.tsx  auth.callback.tsx  dashboard.tsx  index.tsx  signin.tsx  signup.tsx
apps/frontend/src/routes/components/: theme-toggle.tsx
supabase/migrations/: 0001_init.sql
supabase/storage/: policies.sql
