[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI boilerplate"
authors = [{ name = "AI Boilerplate" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "supabase>=2.10.0",
  "beautifulsoup4>=4.12.3",
  "openai>=1.55.3"
]

[tool.uv]
index-strategy = "unsafe-first-party"
